@@ -1,10 +1,10 @@
 Package: ordinal
 Type: Package
 Title: Regression Models for Ordinal Data
-Version: 2014.12-28
-Date: 2014-12-28
+Version: 2015.6-28
+Date: 2015-06-28
 Authors@R: person(given="Rune Haubo Bojesen", family="Christensen",
-    email="rhbc@dtu.dk", role=c("aut", "cre"))
+    email="rune.haubo@gmail.com", role=c("aut", "cre"))
 LazyData: true
 ByteCompile: yes
 Depends:
